# Wargaming-OpenID-Flask

./: .replit  README.md  config1.py  pyproject.toml  server.py
