[tool.poetry]
name = "repl_python3_Wargaming-OpenID-Flask"
version = "0.1.0"
description = ""
authors = ["GermanIvk05 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.1"
pyngrok = "^5.1.0"
pytz = "^2022.1"
Werkzeug = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
